check sklearn version

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -214,12 +214,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ad6fd432-804e-4685-8a09-80251a59f658",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "System:\n",
+      "    python: 3.11.5 | packaged by Anaconda, Inc. | (main, Sep 11 2023, 13:26:23) [MSC v.1916 64 bit (AMD64)]\n",
+      "executable: C:\\Users\\leon\\Desktop\\sample_project\\env\\python.exe\n",
+      "   machine: Windows-10-10.0.19045-SP0\n",
+      "\n",
+      "Python dependencies:\n",
+      "      sklearn: 1.2.2\n",
+      "          pip: 23.3.1\n",
+      "   setuptools: 68.0.0\n",
+      "        numpy: 1.26.0\n",
+      "        scipy: 1.11.3\n",
+      "       Cython: None\n",
+      "       pandas: 2.1.1\n",
+      "   matplotlib: 3.8.0\n",
+      "       joblib: 1.2.0\n",
+      "threadpoolctl: 2.2.0\n",
+      "\n",
+      "Built with OpenMP: True\n",
+      "\n",
+      "threadpoolctl info:\n",
+      "       filepath: C:\\Users\\leon\\Desktop\\sample_project\\env\\Library\\bin\\mkl_rt.2.dll\n",
+      "         prefix: mkl_rt\n",
+      "       user_api: blas\n",
+      "   internal_api: mkl\n",
+      "        version: 2023.1-Product\n",
+      "    num_threads: 2\n",
+      "threading_layer: intel\n",
+      "\n",
+      "       filepath: C:\\Users\\leon\\Desktop\\sample_project\\env\\vcomp140.dll\n",
+      "         prefix: vcomp\n",
+      "       user_api: openmp\n",
+      "   internal_api: openmp\n",
+      "        version: None\n",
+      "    num_threads: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# check sklearn version"
+    "# check sklearn version\n",
+    "import sklearn\n",
+    "sklearn.show_versions()"
    ]
   },
   {
