refit the model

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -2854,6 +2854,7 @@
    ],
    "source": [
     "# another way to convert categories into numbers using dummy data\n",
+    "# but doors is not transformed because its numerical \n",
     "\n",
     "dummies = pd.get_dummies(car_sales[[\"Make\", \"Colour\", \"Doors\"]])\n",
     "dummies"
@@ -2865,7 +2866,14 @@
    "id": "8c64af3d-a49c-4fe8-ba44-7a58fb4c37ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let's refit the model\n",
+    "np.random.seed(42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(transformed_X,\n",
+    "                                                   y,\n",
+    "                                                   test_size=0.2)\n",
+    "model.fit(X_train, y_train)"
+   ]
   }
  ],
  "metadata": {
