--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -2862,10 +2862,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "8c64af3d-a49c-4fe8-ba44-7a58fb4c37ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestRegressor()"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's refit the model\n",
     "np.random.seed(42)\n",
@@ -2873,6 +2897,318 @@
     "                                                   y,\n",
     "                                                   test_size=0.2)\n",
     "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "874895ba-7350-4958-8058-7ab634636f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.3235867221569877"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "549c7344-6a65-4b84-a082-c860504e1e13",
+   "metadata": {},
+   "source": [
+    "### 1.2 What if there were missing values?\n",
+    "\n",
+    "1. Fill then with some value(also known as imputation).\n",
+    "2. Remove the samples with missing data altogether."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3ecb61b4-ba69-402c-8313-abf08f222c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Colour</th>\n",
+       "      <th>Odometer (KM)</th>\n",
+       "      <th>Doors</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>White</td>\n",
+       "      <td>35431.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>15323.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BMW</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>192714.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>19943.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>White</td>\n",
+       "      <td>84714.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28343.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Toyota</td>\n",
+       "      <td>White</td>\n",
+       "      <td>154365.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>13434.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nissan</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>181577.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>14043.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Make Colour  Odometer (KM)  Doors    Price\n",
+       "0   Honda  White        35431.0    4.0  15323.0\n",
+       "1     BMW   Blue       192714.0    5.0  19943.0\n",
+       "2   Honda  White        84714.0    4.0  28343.0\n",
+       "3  Toyota  White       154365.0    4.0  13434.0\n",
+       "4  Nissan   Blue       181577.0    3.0  14043.0"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import car sales missing data\n",
+    "car_sales_missing = pd.read_csv(\"car-sales-extended-missing-data.csv\")\n",
+    "car_sales_missing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "df75144a-674b-4190-b471-94b5ddf007a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Make             49\n",
+       "Colour           50\n",
+       "Odometer (KM)    50\n",
+       "Doors            50\n",
+       "Price            50\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Lets check counts of missing data \n",
+    "car_sales_missing.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "6968fa31-089c-4f85-b52d-3930bf748812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new X & y\n",
+    "X = car_sales_missing.drop(\"Price\", axis=1)\n",
+    "y = car_sales_missing[\"Price\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2ff2be2f-a636-40e6-a8b5-224587f55264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<1000x16 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 4000 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's try and convert our data to numbers\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "categorical_features = [\"Make\", \"Colour\", \"Doors\"]\n",
+    "one_hot = OneHotEncoder()\n",
+    "transformer = ColumnTransformer([(\"one_hot\",\n",
+    "                                  one_hot,\n",
+    "                                  categorical_features)],\n",
+    "                                  remainder=\"passthrough\")\n",
+    "\n",
+    "transformed_X = transformer.fit_transform(X)\n",
+    "transformed_X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cf4a424-9555-4005-aa84-22ce0d62200b",
+   "metadata": {},
+   "source": [
+    "#### Option 1: Fill missing data with Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8f219716-be90-45e3-abc0-ff0e2ebcb7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill the \"Make\" column\n",
+    "car_sales_missing[\"Make\"].fillna(\"missing\", inplace=True)\n",
+    "\n",
+    "# Fill the \"Colour\" column\n",
+    "car_sales_missing[\"Colour\"].fillna(\"missing\", inplace=True)\n",
+    "\n",
+    "# Convert the \"Odometer (KM)\" column to numeric if needed\n",
+    "car_sales_missing[\"Odometer (KM)\"] = pd.to_numeric(car_sales_missing[\"Odometer (KM)\"], errors='coerce')\n",
+    "\n",
+    "# Fill the \"Odometer (KM)\" column\n",
+    "car_sales_missing[\"Odometer (KM)\"].fillna(car_sales_missing[\"Odometer (KM)\"].mean(), inplace=True)\n",
+    "\n",
+    "# Fill the \"Doors\" column\n",
+    "car_sales_missing[\"Doors\"].fillna(4, inplace=True) # 4 is the average number of doors\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "0647dace-f70c-4edc-ac65-aee31b3b1e26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_sales_missing[\"Odometer (KM)\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adf0a211-e714-48d9-89bf-931eb460d826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check our dataframe again for missing values\n"
    ]
   }
  ],
