--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6ee5cb88-3fb7-476a-a5a5-dfa9054f6be2",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "beab3899-baeb-4b1d-94d1-b3fc75305fc4",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "ad6fd432-804e-4685-8a09-80251a59f658",
    "metadata": {},
    "outputs": [
@@ -4028,7 +4028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fe03e02e-8ed6-416f-8f9f-5e870bd5e2d1",
    "metadata": {},
    "outputs": [
@@ -4062,7 +4062,7 @@
        " 'DESCR': '.. _california_housing_dataset:\\n\\nCalifornia Housing dataset\\n--------------------------\\n\\n**Data Set Characteristics:**\\n\\n    :Number of Instances: 20640\\n\\n    :Number of Attributes: 8 numeric, predictive attributes and the target\\n\\n    :Attribute Information:\\n        - MedInc        median income in block group\\n        - HouseAge      median house age in block group\\n        - AveRooms      average number of rooms per household\\n        - AveBedrms     average number of bedrooms per household\\n        - Population    block group population\\n        - AveOccup      average number of household members\\n        - Latitude      block group latitude\\n        - Longitude     block group longitude\\n\\n    :Missing Attribute Values: None\\n\\nThis dataset was obtained from the StatLib repository.\\nhttps://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\\n\\nThe target variable is the median house value for California districts,\\nexpressed in hundreds of thousands of dollars ($100,000).\\n\\nThis dataset was derived from the 1990 U.S. census, using one row per census\\nblock group. A block group is the smallest geographical unit for which the U.S.\\nCensus Bureau publishes sample data (a block group typically has a population\\nof 600 to 3,000 people).\\n\\nA household is a group of people residing within a home. Since the average\\nnumber of rooms and bedrooms in this dataset are provided per household, these\\ncolumns may take surprisingly large values for block groups with few households\\nand many empty houses, such as vacation resorts.\\n\\nIt can be downloaded/loaded using the\\n:func:`sklearn.datasets.fetch_california_housing` function.\\n\\n.. topic:: References\\n\\n    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\\n      Statistics and Probability Letters, 33 (1997) 291-297\\n'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4076,7 +4076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e3dfa38f-3962-497f-9587-0889479a23ec",
    "metadata": {},
    "outputs": [
@@ -4187,7 +4187,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4201,7 +4201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "06ccae07-1f3e-43ef-8f0f-8da1c3efb223",
    "metadata": {},
    "outputs": [
@@ -4318,7 +4318,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4340,7 +4340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5d82c4d3-fb81-4040-82e2-8eafee954fd9",
    "metadata": {},
    "outputs": [
@@ -4373,6 +4373,7 @@
        "      <th>AveOccup</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
+       "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4386,6 +4387,7 @@
        "      <td>2.555556</td>\n",
        "      <td>37.88</td>\n",
        "      <td>-122.23</td>\n",
+       "      <td>4.526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4397,6 +4399,7 @@
        "      <td>2.109842</td>\n",
        "      <td>37.86</td>\n",
        "      <td>-122.22</td>\n",
+       "      <td>3.585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4408,6 +4411,7 @@
        "      <td>2.802260</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.24</td>\n",
+       "      <td>3.521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4419,6 +4423,7 @@
        "      <td>2.547945</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.25</td>\n",
+       "      <td>3.413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4430,9 +4435,11 @@
        "      <td>2.181467</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.25</td>\n",
+       "      <td>3.422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -4452,6 +4459,7 @@
        "      <td>2.560606</td>\n",
        "      <td>39.48</td>\n",
        "      <td>-121.09</td>\n",
+       "      <td>0.781</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20636</th>\n",
@@ -4463,6 +4471,7 @@
        "      <td>3.122807</td>\n",
        "      <td>39.49</td>\n",
        "      <td>-121.21</td>\n",
+       "      <td>0.771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20637</th>\n",
@@ -4474,6 +4483,7 @@
        "      <td>2.325635</td>\n",
        "      <td>39.43</td>\n",
        "      <td>-121.22</td>\n",
+       "      <td>0.923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20638</th>\n",
@@ -4485,6 +4495,7 @@
        "      <td>2.123209</td>\n",
        "      <td>39.43</td>\n",
        "      <td>-121.32</td>\n",
+       "      <td>0.847</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20639</th>\n",
@@ -4496,10 +4507,11 @@
        "      <td>2.616981</td>\n",
        "      <td>39.37</td>\n",
        "      <td>-121.24</td>\n",
+       "      <td>0.894</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20640 rows × 8 columns</p>\n",
+       "<p>20640 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4516,23 +4528,23 @@
        "20638  1.8672      18.0  5.329513   1.171920       741.0  2.123209     39.43   \n",
        "20639  2.3886      16.0  5.254717   1.162264      1387.0  2.616981     39.37   \n",
        "\n",
-       "       Longitude  \n",
-       "0        -122.23  \n",
-       "1        -122.22  \n",
-       "2        -122.24  \n",
-       "3        -122.25  \n",
-       "4        -122.25  \n",
-       "...          ...  \n",
-       "20635    -121.09  \n",
-       "20636    -121.21  \n",
-       "20637    -121.22  \n",
-       "20638    -121.32  \n",
-       "20639    -121.24  \n",
+       "       Longitude  target  \n",
+       "0        -122.23   4.526  \n",
+       "1        -122.22   3.585  \n",
+       "2        -122.24   3.521  \n",
+       "3        -122.25   3.413  \n",
+       "4        -122.25   3.422  \n",
+       "...          ...     ...  \n",
+       "20635    -121.09   0.781  \n",
+       "20636    -121.21   0.771  \n",
+       "20637    -121.22   0.923  \n",
+       "20638    -121.32   0.847  \n",
+       "20639    -121.24   0.894  \n",
        "\n",
-       "[20640 rows x 8 columns]"
+       "[20640 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4543,7 +4555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "3625fa1e-26e0-4d0e-83dd-b6e1ae05aa03",
    "metadata": {},
    "outputs": [
@@ -4579,7 +4591,7 @@
        "0.5758549611440127"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4608,9 +4620,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93552d0e-04c2-4811-9c29-04cf6aa1a752",
+   "metadata": {},
+   "source": [
+    "What if `Ridge` didn't work or the score didn't fit oue needs?\n",
+    "\n",
+    "Well, we could always try a different model\n",
+    "\n",
+    "How about we try an ensembel model ( which is a combination of smaller models to try and make better predictions than just a single model?\n",
+    "\n",
+    "Sklearn's ensemble models can be found on: search: sciktlearn's ensemble models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "101b40e2-1146-4c15-a159-5cd62d61e778",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MedInc</th>\n",
+       "      <th>HouseAge</th>\n",
+       "      <th>AveRooms</th>\n",
+       "      <th>AveBedrms</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>AveOccup</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>6.984127</td>\n",
+       "      <td>1.023810</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>2.555556</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>4.526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6.238137</td>\n",
+       "      <td>0.971880</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>2.109842</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>3.585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>8.288136</td>\n",
+       "      <td>1.073446</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>2.802260</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>3.521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>5.817352</td>\n",
+       "      <td>1.073059</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>2.547945</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>3.413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>6.281853</td>\n",
+       "      <td>1.081081</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>2.181467</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>3.422</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   MedInc  HouseAge  AveRooms  AveBedrms  Population  AveOccup  Latitude  \\\n",
+       "0  8.3252      41.0  6.984127   1.023810       322.0  2.555556     37.88   \n",
+       "1  8.3014      21.0  6.238137   0.971880      2401.0  2.109842     37.86   \n",
+       "2  7.2574      52.0  8.288136   1.073446       496.0  2.802260     37.85   \n",
+       "3  5.6431      52.0  5.817352   1.073059       558.0  2.547945     37.85   \n",
+       "4  3.8462      52.0  6.281853   1.081081       565.0  2.181467     37.85   \n",
+       "\n",
+       "   Longitude  target  \n",
+       "0    -122.23   4.526  \n",
+       "1    -122.22   3.585  \n",
+       "2    -122.24   3.521  \n",
+       "3    -122.25   3.413  \n",
+       "4    -122.25   3.422  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3094da59-fbe5-4f7a-928b-d09dfa56331a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "C:\\Users\\leon\\Desktop\\sample_project\\env\\Lib\\site-packages\\sklearn\\utils\\validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8059837014172988"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the RandomForestRegressor model class from the ensemble module\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Create the data\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing[\"target\"]\n",
+    "\n",
+    "# Split into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# create random forest model\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "#Check the score of the model(on test set)\n",
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "873384f5-c81c-4e36-a636-9a1a0034b480",
+   "id": "5480bc97-f10a-406a-a1d5-d4719cad5a53",
    "metadata": {},
    "outputs": [],
    "source": []
