--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -5649,8 +5649,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1c7294de-f7f7-40e8-aef6-851ac4fe31ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_test, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5df5768d-6f6c-4a9e-80c7-424151b2658b",
+   "metadata": {},
+   "source": [
+    "Make predictions with `predict_proba`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3ab7587d-735f-4938-b894-1ef569217a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.89, 0.11],\n",
+       "       [0.49, 0.51],\n",
+       "       [0.43, 0.57],\n",
+       "       [0.84, 0.16],\n",
+       "       [0.18, 0.82]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# predict_proba() returns probabilities of a classification label\n",
+    "clf.predict_proba(X_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4b5d6b8b-0b1a-4d2e-8a94-aa9dfd29f059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's predict() on the same data....\n",
+    "clf.predict(X_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35981d67-8c76-403e-a76e-cd8f635eeea1",
    "metadata": {},
    "outputs": [],
    "source": []
