sklearn-classification report

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -6478,7 +6478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "00b10a82-216e-40aa-a744-575cacadcfa0",
    "metadata": {},
    "outputs": [],
@@ -6498,7 +6498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "a1414c7d-376f-4760-9323-57199d6e403e",
    "metadata": {},
    "outputs": [
@@ -6508,7 +6508,7 @@
        "0.8248087431693989"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6563,37 +6563,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0692630e-6ec5-4080-8513-b44586b884ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create X_test...etc\n",
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "cab8173a-46eb-4f34-8e35-b43c203e4b66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.66, 0.34],\n",
-       "       [0.62, 0.38],\n",
-       "       [0.07, 0.93],\n",
-       "       [0.47, 0.53],\n",
-       "       [0.38, 0.62],\n",
-       "       [0.39, 0.61],\n",
-       "       [0.32, 0.68],\n",
-       "       [0.84, 0.16],\n",
-       "       [0.33, 0.67],\n",
-       "       [0.13, 0.87]])"
+       "array([[0.51, 0.49],\n",
+       "       [0.17, 0.83],\n",
+       "       [0.51, 0.49],\n",
+       "       [0.72, 0.28],\n",
+       "       [0.43, 0.57],\n",
+       "       [0.12, 0.88],\n",
+       "       [0.3 , 0.7 ],\n",
+       "       [0.97, 0.03],\n",
+       "       [0.15, 0.85],\n",
+       "       [0.4 , 0.6 ]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6612,17 +6613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8ad2e6a2-405e-449b-81c0-ef1f6f765932",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.34, 0.38, 0.93, 0.53, 0.62, 0.61, 0.68, 0.16, 0.67, 0.87])"
+       "array([0.49, 0.83, 0.49, 0.28, 0.57, 0.88, 0.7 , 0.03, 0.85, 0.6 ])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6634,22 +6635,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a1591f71-61e4-47db-903f-50fadb2f98d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.03703704, 0.07407407, 0.07407407,\n",
-       "       0.11111111, 0.11111111, 0.14814815, 0.18518519, 0.18518519,\n",
-       "       0.2962963 , 0.2962963 , 0.40740741, 0.48148148, 0.48148148,\n",
-       "       0.55555556, 0.66666667, 0.74074074, 1.        ])"
+       "array([0.        , 0.03448276, 0.03448276, 0.03448276, 0.03448276,\n",
+       "       0.03448276, 0.03448276, 0.06896552, 0.06896552, 0.06896552,\n",
+       "       0.10344828, 0.10344828, 0.13793103, 0.13793103, 0.13793103,\n",
+       "       0.20689655, 0.20689655, 0.20689655, 0.27586207, 0.37931034,\n",
+       "       0.37931034, 0.48275862, 0.48275862, 0.55172414, 0.55172414,\n",
+       "       1.        ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6786,18 +6787,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "855e77fe-2bdb-478c-ad5d-d550f57726c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[20,  7],\n",
-       "       [ 5, 29]], dtype=int64)"
+       "array([[23,  6],\n",
+       "       [ 6, 26]], dtype=int64)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6812,7 +6813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "0da475ff-7a5b-49cb-bb9b-ad267a0d0499",
    "metadata": {},
    "outputs": [
@@ -6849,13 +6850,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>7</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>29</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6864,11 +6865,11 @@
       "text/plain": [
        "Predicted Labels   0   1\n",
        "Actual Labels           \n",
-       "0                 20   7\n",
-       "1                  5  29"
+       "0                 23   6\n",
+       "1                  6  26"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7067,9 +7068,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da5d1db4-ac6c-44f4-b7c3-545527659c09",
+   "metadata": {},
+   "source": [
+    "### Classification Report\n",
+    "\n",
+    "combines a number of evaluatio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4a0338ff-525e-4a2f-98fc-d733b4ebd44e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.79      0.79        29\n",
+      "           1       0.81      0.81      0.81        32\n",
+      "\n",
+      "    accuracy                           0.80        61\n",
+      "   macro avg       0.80      0.80      0.80        61\n",
+      "weighted avg       0.80      0.80      0.80        61\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_preds))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3a6332c-ad13-42a7-a138-e6f8950af1de",
+   "id": "2d2c74a5-8cb8-4ae3-97bc-c92ffac11de9",
    "metadata": {},
    "outputs": [],
    "source": []
