sklearn: regression model eval -> MAE

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -7216,6 +7216,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "515234d5-d2d3-4429-b229-43f568ac9c6c",
+   "metadata": {},
+   "source": [
+    "**R2 Score**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "3a15d6f1-0915-4bb8-a3a4-fde71f4f1253",
@@ -7329,13 +7337,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2effcde3-cb27-4e80-8eb0-c5b20f64e14c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "r2_score(y_true=)"
+    "r2_score(y_true=y_test,\n",
+    "         y_pred=y_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3422c9-36b0-4ffb-93e1-9d1f1f7eefac",
+   "metadata": {},
+   "source": [
+    "**Mean absolute error (MAE)**\n",
+    "\n",
+    "MAE -> Is the avergage of the absolute differences between predictions and actual values.\n",
+    "\n",
+    "It gives you an ide of how wrong your model predictions are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9af13a8e-6708-4998-bee4-a87ee89572e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32672061405038777"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MAE \n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "y_preds = model.predict(X_test)\n",
+    "mae = mean_absolute_error(y_test, y_preds)\n",
+    "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2664e8ba-c6bd-4cea-96bc-e4f771234970",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual values</th>\n",
+       "      <th>predicted values</th>\n",
+       "      <th>differences</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>0.47700</td>\n",
+       "      <td>0.499090</td>\n",
+       "      <td>0.022090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>0.45800</td>\n",
+       "      <td>0.748150</td>\n",
+       "      <td>0.290150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>5.00001</td>\n",
+       "      <td>4.933456</td>\n",
+       "      <td>-0.066554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>2.18600</td>\n",
+       "      <td>2.569780</td>\n",
+       "      <td>0.383780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>2.78000</td>\n",
+       "      <td>2.346900</td>\n",
+       "      <td>-0.433100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual values  predicted values  differences\n",
+       "20046        0.47700          0.499090     0.022090\n",
+       "3024         0.45800          0.748150     0.290150\n",
+       "15663        5.00001          4.933456    -0.066554\n",
+       "20484        2.18600          2.569780     0.383780\n",
+       "9814         2.78000          2.346900    -0.433100"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data={\"actual values\": y_test,\n",
+    "                        \"predicted values\": y_preds})\n",
+    "df[\"differences\"] = df[\"predicted values\"] - df[\"actual values\"]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ae905340-c19e-42e2-bb48-4129d4d3aecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32672061405038777"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mae discards the negatives\n",
+    "np.abs(df[\"differences\"]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3cefe79-32b0-4968-8f36-67c5f9a82a64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
