sklearn: regression model eval -> MSE

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -7397,7 +7397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "2664e8ba-c6bd-4cea-96bc-e4f771234970",
    "metadata": {},
    "outputs": [
@@ -7458,6 +7458,36 @@
        "      <td>2.346900</td>\n",
        "      <td>-0.433100</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13311</th>\n",
+       "      <td>1.58700</td>\n",
+       "      <td>1.672960</td>\n",
+       "      <td>0.085960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7113</th>\n",
+       "      <td>1.98200</td>\n",
+       "      <td>2.301510</td>\n",
+       "      <td>0.319510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7668</th>\n",
+       "      <td>1.57500</td>\n",
+       "      <td>1.667750</td>\n",
+       "      <td>0.092750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18246</th>\n",
+       "      <td>3.40000</td>\n",
+       "      <td>2.526490</td>\n",
+       "      <td>-0.873510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5723</th>\n",
+       "      <td>4.46600</td>\n",
+       "      <td>4.860098</td>\n",
+       "      <td>0.394098</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -7468,10 +7498,15 @@
        "3024         0.45800          0.748150     0.290150\n",
        "15663        5.00001          4.933456    -0.066554\n",
        "20484        2.18600          2.569780     0.383780\n",
-       "9814         2.78000          2.346900    -0.433100"
+       "9814         2.78000          2.346900    -0.433100\n",
+       "13311        1.58700          1.672960     0.085960\n",
+       "7113         1.98200          2.301510     0.319510\n",
+       "7668         1.57500          1.667750     0.092750\n",
+       "18246        3.40000          2.526490    -0.873510\n",
+       "5723         4.46600          4.860098     0.394098"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7480,12 +7515,12 @@
     "df = pd.DataFrame(data={\"actual values\": y_test,\n",
     "                        \"predicted values\": y_preds})\n",
     "df[\"differences\"] = df[\"predicted values\"] - df[\"actual values\"]\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "ae905340-c19e-42e2-bb48-4129d4d3aecb",
    "metadata": {},
    "outputs": [
@@ -7495,20 +7530,176 @@
        "0.32672061405038777"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# mae discards the negatives\n",
+    "# mae using formulas and differences\n",
     "np.abs(df[\"differences\"]).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c36701-5a01-4fc1-9c06-8d437953dda1",
+   "metadata": {},
+   "source": [
+    "**Mean squared error (MSE)**\n",
+    "\n",
+    "MSE is the mean of the square of the errors between actaul and predicted values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ddb63b13-399c-4a05-936c-05c2615ea84b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2542406995878388"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean squared error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "y_preds = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_preds)\n",
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd2e247d-e53c-4569-9c9f-61e1ebacee10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual values</th>\n",
+       "      <th>predicted values</th>\n",
+       "      <th>differences</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>0.47700</td>\n",
+       "      <td>0.499090</td>\n",
+       "      <td>0.000488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>0.45800</td>\n",
+       "      <td>0.748150</td>\n",
+       "      <td>0.084187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>5.00001</td>\n",
+       "      <td>4.933456</td>\n",
+       "      <td>0.004429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>2.18600</td>\n",
+       "      <td>2.569780</td>\n",
+       "      <td>0.147287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>2.78000</td>\n",
+       "      <td>2.346900</td>\n",
+       "      <td>0.187576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       actual values  predicted values  differences\n",
+       "20046        0.47700          0.499090     0.000488\n",
+       "3024         0.45800          0.748150     0.084187\n",
+       "15663        5.00001          4.933456     0.004429\n",
+       "20484        2.18600          2.569780     0.147287\n",
+       "9814         2.78000          2.346900     0.187576"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"differences\"] = np.square(df[\"differences\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d6e90b36-01f5-4981-a29d-1e49ec6ee6d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5627373499234298"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating MSE by hand\n",
+    "squared = np.square(df[\"differences\"])\n",
+    "squared.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "770c369d-75b8-4e45-8e7d-1afe04ebd293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with large errors we get a higher MSE "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3cefe79-32b0-4968-8f36-67c5f9a82a64",
+   "id": "ef78a0bb-f408-47ad-8c30-c8c93faaca91",
    "metadata": {},
    "outputs": [],
    "source": []
