sklearn: model eval with cross validated recall

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -7858,12 +7858,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c031375d-fdea-410e-91a5-a63c5de19a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84848485, 0.87878788, 0.84848485, 0.81818182, 0.87878788])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recall \n",
+    "np.random.seed(42)\n",
+    "cv_recall = cross_val_score(clf, X, y, cv=5, scoring=\"recall\")\n",
+    "cv_recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad38936d-4432-4c7a-8d36-85de7f8e1a75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Recall \n"
+    "# a model does better with recall than the precision and accuracy\n"
    ]
   }
  ],
